<resources>
    <string name="app_name">KalselEvent</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="daftar">DAFTAR</string>
    <string-array name="lokasi">
        <item>Semua Lokasi</item>
        <item>Banjar Baru</item>
        <item>Banjarmasin</item>
        <item>Marabahan</item>
    </string-array>
</resources>